--- a/help.html
+++ b/help.html
@@ -24,7 +24,7 @@
 	
 	<div id="fix">
 	<div id="fixtop"><br><br><br><p>If you have been at least influenced by this and are curious to know more, there are several things you can do - all conveniently linked on one page! First of all...</div>
-	<div id="fixmiddle1"><p>The <a href="https://www.nrc.gov/about-nrc/governing-laws.html">Nuclear Regulatory Commission</a> is regulates nuclear power in the United States and regulates inspections. They are the go-to for anything dealing with nuclear power, especially on a governmental or federal level. Obviously, there will likely be a fairly pro-nuclear bias, but the NRC still should be a top source of information.
+	<div id="fixmiddle1"><p>The <a href="https://www.nrc.gov/about-nrc/governing-laws.html">Nuclear Regulatory Commission</a> regulates nuclear power in the United States and regulates inspections. They are the go-to for anything dealing with nuclear power, especially on a governmental or federal level. Obviously, there will likely be a fairly pro-nuclear bias, but the NRC still should be a top source of information.
 	<p>(This information is from their website.) The NRC is headquartered in Maryland. <i>You can mail to:<p></i>U.S. Nuclear Regulatory Commission
 	<p>One White Flint North
 	<p>11555 Rockville Pike
